# fluffy-enigma

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/chatbot/: __init__.py  bot.py  cli.py
tests/: test_bot.py
