[project]
name = "fluffy-enigma"
version = "0.1.0"
description = "Milestone 1: Smart CLI Chatbot — learning LangChain primitives"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
# `chat` becomes a runnable command after `uv pip install -e .`
chat = "chatbot.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatchling where our package lives (src layout)
packages = ["src/chatbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add src/ to the Python path so `import chatbot` resolves without installing
pythonpath = ["src"]
